fix: prevent overlapping search content
The placeholder is now hidden on mobile devices, scope filter is
represented by an icon instead of text and a correct padding is applied
to the search input so that the value ends before reaching the icons.

--- a/packages/design-system/src/styles/theme/oc-visibility.scss
+++ b/packages/design-system/src/styles/theme/oc-visibility.scss
@@ -89,3 +89,18 @@
   white-space: nowrap;
   width: 1px !important;
 }
+
+@media (max-width: $oc-breakpoint-xsmall-max) {
+  .oc-invisible-sr\@s {
+    border: 0 !important;
+    clip: rect(1px, 1px, 1px, 1px) !important;
+    height: 1px !important;
+    overflow: hidden !important;
+    padding: 0 !important;
+    // Need to make sure we override any existing styles.
+    position: absolute !important;
+    top: 0;
+    white-space: nowrap;
+    width: 1px !important;
+  }
+}
